--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <head>
+  <title>Estimate Calculator & Scheduling Tool</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://mackinze-droid.github.io/scheduling-tool-assets/style.css">
+</head>
+
 <body>
   <div class="container">
     <h1>Get Your Free Estimate & Book Services</h1>
